# nativium

./: .clang-format  .editorconfig  .gitignore  .lcovrc  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  nativium.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml  docs.yml  ios.yml  linux.yml  macos.yml  wasm.yml  windows.yml
apps/android/runner/: .gitignore  build.gradle  nativium.setup.gradle  settings.gradle
apps/android/runner/app/: build.gradle  nativium.dependency.gradle
apps/android/runner/app/src/main/: AndroidManifest.xml
apps/ios/runner/: Gemfile  Makefile  Podfile
apps/ios/runner/Runner/: Runner-Bridging-Header.h
apps/ios/runner/Runner-Tests/Tests/: CoreTests.swift
apps/ios/runner/Runner-Tv/App/: MainApp.swift
apps/ios/runner/Runner-Tv/Assets.xcassets/Brand Assets.brandassets/: Contents.json
apps/ios/runner/Runner-Tv/Assets.xcassets/Brand Assets.brandassets/App Icon - App Store.imagestack/: Contents.json
apps/ios/runner/Runner-Tv/Extensions/: ColorExtensions.swift  ViewExtensions.swift
apps/ios/runner/Runner-Tv/Helpers/: UIHelper.swift
apps/ios/runner/Runner-Tv/Models/: ViewModelState.swift
apps/ios/runner/Runner-Tv/UI/Common/: AlertMessageView.swift  LoadingView.swift
apps/ios/runner/Runner-Tv/UI/Home/: HomeView.swift
apps/ios/runner/Runner-Watch/: Info.plist
apps/ios/runner/Runner-Watch/Assets.xcassets/AccentColor.colorset/: Contents.json
apps/ios/runner/Runner-Watch/Assets.xcassets/AppIcon.appiconset/: Contents.json
apps/ios/runner/Runner-Watch/Base.lproj/: Interface.storyboard
apps/ios/runner/Runner-WatchExtension/App/: ExtensionDelegate.swift  Info.plist
apps/ios/runner/Runner-WatchExtension/Models/: ViewModelState.swift
apps/ios/runner/Runner-WatchExtension/UI/Home/: HomeView.swift  HomeViewModel.swift
apps/ios/runner/Runner.xcodeproj/: project.pbxproj
apps/ios/runner/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/ios/runner/Runner/App/: AppDelegate.swift
apps/ios/runner/Runner/Base.lproj/: LaunchScreen.storyboard
apps/ios/runner/Runner/Helpers/: UIHelper.swift
apps/ios/runner/Runner/UI/Cells/: SimpleOptionTableViewCell.swift
apps/ios/runner/Runner/UI/Controllers/: HomeViewController.swift  SettingsViewController.swift
apps/ios/runner/Runner/en.lproj/: Localizable.strings
apps/ios/runner/Runner/pt-BR.lproj/: Localizable.strings
apps/ios/runner/Shared/App/: Enumerators.swift
apps/ios/runner/Shared/Extensions/: SwiftColorsExtension.swift
apps/ios/runner/Shared/Helpers/: DateTimeHelper.swift
apps/ios/runner/Shared/Models/: SimpleOption.swift
cmake/: common.cmake  dependencies-tests.cmake  dependencies.cmake  functions.cmake
commands/: app.py  clear.py  code.py  conan.py  custom.py  doc.py  gluecode.py  help.py  target.py
conan/darwin-toolchain/: .gitignore  README.md  conanfile.py
conan/darwin-toolchain/test_package/: CMakeLists.txt  conanfile.py
conan/profiles/: nativium_android_profile  nativium_catalyst_profile  nativium_ios_profile  nativium_linux_profile  nativium_macos_profile  nativium_tvos_profile  nativium_wasm_profile  nativium_watchos_profile  nativium_windows_profile
conan/recipe/: conanfile.py
config/: apps.py  docs.py  gluecode.py
core/: app_android.py  app_ios.py  bootstrap.py  command.py  const.py  gluecode.py  module.py  net.py  pack.py  target.py  tool.py  util.py
docs/main/: mkdocs.yml
docs/main/docs/: about.md  apple.md  cmake.md  code-tools.md  commands.md  custom.md  distribution.md  documentation.md  glue-code.md  how-to-start.md  index.md  libraries.md  modules.md  platforms.md  projects.md  requirements.md  support.md  targets.md  tests.md  troubleshooting.md
modules/app-core/cmake/: module.cmake
modules/app-core/config/: module_conan.py
modules/app-core/gluecode/: generate.py  proj.djinni
modules/app-core/gluecode/generated-src/ts/: app-core.ts
modules/app-core/gluecode/yaml/: application_core.yaml
modules/app-core/implementation/cpp/nativium/core/: ApplicationCoreImpl.cpp  ApplicationCoreImpl.hpp
modules/app-main/cmake/: module.cmake
modules/app-main/implementation/cpp/src/: main.cpp
modules/app-wasm/cmake/: module.cmake
modules/app-wasm/implementation/cpp/src/: main.cpp
modules/support-lib/cmake/: module.cmake
modules/support-lib/config/: module_conan.py
modules/support-lib/nativium/jni/: djinni_main.cpp
modules/tests/cmake/: module.cmake
modules/tests/implementation/cpp/include/fixtures/: SampleFixture.hpp
modules/tests/implementation/cpp/src/app/: core.cpp
targets/android/cmake/: target.cmake
targets/android/config/: target.py  target_config.py
targets/android/support/android-aar-project/: build.gradle  settings.gradle
targets/android/support/android-aar-project/gradle/wrapper/: gradle-wrapper.properties
targets/android/verbs/: build.py  dist.py  package.py  prepare.py  setup.py
targets/ios/cmake/: target.cmake
targets/ios/config/: target.py  target_config.py
targets/ios/support/cocoapods/: nativium.podspec
targets/ios/support/modules/: module.modulemap  umbrella-header.h
targets/ios/verbs/: build.py  dist.py  package.py  prepare.py  serve.py  setup.py
targets/linux/cmake/: target.cmake
targets/linux/config/: target.py
targets/linux/verbs/: build.py  dist.py  package.py  prepare.py  run.py  setup.py
targets/macos/cmake/: target.cmake
targets/macos/config/: target.py  target_config.py
targets/macos/verbs/: build.py  dist.py  package.py  prepare.py  run.py  setup.py
targets/tests/cmake/: target.cmake
targets/tests/config/: target.py  target_conan.py  target_config.py
targets/tests/verbs/: coverage.py  prepare.py  run.py  setup.py
targets/wasm/cmake/: source.cmake  target.cmake
targets/wasm/config/: target.py  target_config.py
targets/wasm/support/web/: README.md  index.html
targets/wasm/verbs/: build.py  dist.py  package.py  prepare.py  serve.py  setup.py
targets/windows/config/: target.py
targets/windows/verbs/: build.py  dist.py  package.py  prepare.py  run.py  setup.py
(+41 files in other folders)
